# verovio

./: ossia.cpp  ossia.h  pyproject.toml  setup.py  shortlist.txt  snapcraft.yaml  snapcraft.yml
.github/problem_matchers/: gcc.json
.github/workflows/: ci_build.yml  python-ci-wheel.yml
Verovio.xcodeproj/: project.pbxproj
bindings/iOS/: all.h
cmake/: CMakeLists.txt
data/: Mozart.css  Mozart.xml
data/Mozart/: 266D.xml  266E.xml  266F.xml  E003.xml  E004.xml  E082.xml  E083.xml  E084.xml  E085.xml  E086.xml  E087.xml  E088.xml  E089.xml  E08A.xml  E08B.xml  E0F5.xml  E0F6.xml  E4E2.xml  E4E3.xml  E4E4.xml  E4E5.xml  E4E6.xml  E4E7.xml  E4E8.xml  E4E9.xml
doc/: test-suite-diff.py  test-suite.py
doc/tests/ossia/: ossia-syl-connector-test.mei  ossia-vertical-alignment.mei  staff-ossia-001.mei  staff-ossia-barlines.mei
doc/tests/output/1_clefs/: 01_G2-clef.json  02_C1-clef.json  03_C2-clef.json  04_C3-clef.json  05_C4-clef.json  06_C5-clef.json  07_F3-clef.json  08_F4-clef.json  09_g2-clef.json
doc/tests/output/2_keys/: 01_key-sharp-G-1.json  02_key-sharp-G-2.json  03_key-sharp-G-3.json  04_key-sharp-G-4.json  05_key-sharp-G-5.json  06_key-sharp-G-6.json  07_key-sharp-G-7.json  08_key-flat-G-1.json  09_key-flat-G-2.json  10_key-flat-G-3.json  11_key-flat-G-4.json  12_key-flat-G-5.json  13_key-flat-G-6.json  14_key-flat-G-7.json  15_key-sharp-C1-7.json  16_key-flat-C1-7.json  17_key-sharp-C2-7.json  18_key-flat-C2-7.json  19_key-sharp-C3-7.json  20_key-flat-C3-7.json  21_key-sharp-C4-7.json  22_key-flat-C4-7.json  23_key-sharp-C5-7.json  24_key-flat-C5-7.json  25_key-sharp-F3-7.json  26_key-flat-F3-7.json  27_key-sharp-F4-7.json  28_key-flat-F4-7.json
doc/tests/output/3_octave/: 01_oct-h1.json  02_oct-h2.json  03_oct-h3.json  04_oct-h4.json  05_oct-l1.json  06_oct-l2.json  07_oct-l3.json
doc/tests/output/4_duration/: 01_dur-longa.json  02_dur-breve.json  03_dur-semibreve.json  04_dur-minima.json  05_dur-4th.json  06_dur-8th.json  07_dur-16th.json  08_dur-32th.json  09_dur-64th.json  10_dur-128th.json  11_dur-4dot.json  12_dur-8dotdot.json  13_dur-7neumatic.json
doc/tests/output/5_accidentals/: 01_accid-sharp.json  02_accid-sharpsharp.json  03_accid-flat.json  04_accid-flatflat.json  05_accid-natural.json
doc/tests/output/6_mixed/: abbreviated_writing.json  base_tuplet.json  beam_in_tuplet.json  beams_and_tuplets.json  clef_changes.json  dotted_chord.json  grace_notes_accaciature.json  grace_notes_appogiature.json  measure_rest_and_keysig_change.json  measure_rests.json  quintuplet_beam.json  rhythmic_patterns.json  ties.json  trills_and_fermata.json  triplet_short.json  tuplet_in_beam.json
emscripten/: buildToolkit
fonts/: Leipzig-5.2.sfd  generate_all.sh  supported.xsl
fonts/Mozart/: mozart_metadata.json
github/workflows/: clang-format.yml
include/hum/: humlib.h
include/json/: jsonxx.h
include/midi/: MidiEventList.h  MidiFile.h  MidiMessage.h
include/pugi/: pugixml.hpp
include/utf8/: checked.h  core.h  unchecked.h
include/vrv/: accid.h  artic.h  att.h  attalternates.h  attdef.h  barline.h  bboxdevicecontext.h  beam.h  boundary.h  boundingbox.h  comparison.h  devicecontext.h  devicecontextbase.h  doc.h  drawinginterface.h  durationinterface.h  editortoolkit.h  editortoolkit_cmn.h  editortoolkit_neume.h  elementpart.h  facsimileinterface.h  floatingobject.h  functorparams.h  glyph.h  hairpin.h  horizontalaligner.h  io.h  ioabc.h  iohumdrum.h  iomei.h  iomusxml.h  iopae.h  layer.h  layerelement.h  measure.h  mnum.h  neume.h  note.h  object.h  options.h  (+31 more)
libmei/: attclasses.h  attconverter.cpp  attconverter.h  atts_analytical.cpp  atts_analytical.h  atts_cmn.cpp  atts_cmn.h  atts_cmnornaments.cpp  atts_cmnornaments.h  atts_critapp.cpp  atts_critapp.h  atts_edittrans.cpp  atts_edittrans.h  atts_externalsymbols.cpp  atts_externalsymbols.h  atts_facsimile.cpp  atts_facsimile.h  atts_figtable.cpp  atts_figtable.h  atts_fingering.cpp  atts_fingering.h  atts_gestural.cpp  atts_gestural.h  atts_harmony.cpp  atts_harmony.h  atts_header.cpp  atts_header.h  atts_mei.cpp  atts_mei.h  atts_mensural.cpp  atts_mensural.h  atts_midi.cpp  atts_midi.h  atts_neumes.cpp  atts_neumes.h  atts_pagebased.cpp  atts_pagebased.h  atts_performance.cpp  atts_performance.h  atts_shared.cpp  (+6 more)
libmei/addons/: att.cpp  attdef.h
libmei/mei/: mei-verovio.xml
src/: accid.cpp  alignfunctor.cpp  app.cpp  arpeg.cpp  artic.cpp  att.cpp  barline.cpp  bboxdevicecontext.cpp  beam.cpp  beatrpt.cpp  boundary.cpp  boundingbox.cpp  choice.cpp  chord.cpp  clef.cpp  controlelement.cpp  devicecontext.cpp  doc.cpp  dot.cpp  drawinginterface.cpp  durationinterface.cpp  dynam.cpp  editorial.cpp  editortoolkit_cmn.cpp  editortoolkit_neume.cpp  elementpart.cpp  ending.cpp  expansionmap.cpp  f.cpp  facsimile.cpp  facsimileinterface.cpp  fermata.cpp  fig.cpp  floatingobject.cpp  ftrem.cpp  glyph.cpp  gracegrp.cpp  hairpin.cpp  halfmrpt.cpp  harm.cpp  (+80 more)
src/hum/: humlib.cpp
src/json/: jsonxx.cc
src/midi/: Binasc.cpp  MidiEvent.cpp  MidiEventList.cpp  MidiFile.cpp  MidiMessage.cpp
src/pugi/: pugixml.cpp
test-output/ossia/: ossia-vertical-alignment.json  staff-ossia-001.json  staff-ossia-barlines.json
tools/: c_wrapper.cpp  main.cpp  snapcraft.yaml
